# oxide-auth

./: .cirrus.yml  .gitignore  CHANGELOG.md  Cargo.toml  Changes.md  Contributors.txt  Migration.md  Readme.md  release  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md
doc/: ISSUE_TEMPLATE.md
docs/: CONTRIBUTING.md  LICENSE  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  rfc6750.txt  rfc7009.txt  rfc7662.txt  rfc8414.txt
examples/: actix.rs  authorization_actix.rs  authorization_code.rs  authorization_gotham.rs  authorization_rocket.rs  authorization_rouille.rs  iron.rs  rocket.rs  rouille.rs
examples/actix-example/: Cargo.toml
examples/actix-example/src/: main.rs  support.rs
examples/iron-example/: Cargo.toml
examples/iron-example/src/: main.rs  support.rs
examples/rocket-example/: Cargo.toml
examples/rocket-example/src/: main.rs  support.rs
examples/rouille-example/: Cargo.toml
examples/rouille-example/src/: main.rs  support.rs
examples/support/: actix.rs  client.rs  generic.rs  gotham.rs  iron.rs  mod.rs  rocket.rs  rouille.rs
examples/support_gotham/: mod.rs
oxide-auth/: Cargo.toml  Changes.md  Readme.md
oxide-auth-actix/: Cargo.toml  Changes.md  Readme.md
oxide-auth-actix/examples/: actix.rs
oxide-auth-actix/examples/actix-example/: Cargo.toml
oxide-auth-actix/examples/actix-example/src/: allowed_solicitor.rs  main.rs  operations.rs  state.rs  support.rs
oxide-auth-actix/src/: endpoint.rs  future_endpoint.rs  lib.rs  operations.rs  request.rs
oxide-auth-actix/src/message/: authorizer.rs  issuer.rs  mod.rs  registrar.rs
oxide-auth-actix/src/tests/: mod.rs
oxide-auth-async/: Cargo.toml  Changes.md  Readme.md
oxide-auth-async-actix/: Cargo.toml  Changes.md  Readme.md
oxide-auth-async-actix/examples/async-actix-example/: Cargo.toml
oxide-auth-async-actix/examples/async-actix-example/src/: endpoint.rs  main.rs  support.rs
oxide-auth-async-actix/src/: lib.rs  operations.rs
oxide-auth-async/src/: code_grant.rs  endpoint.rs  lib.rs  primitives.rs
oxide-auth-async/src/endpoint/: access_token.rs  authorization.rs  client_credentials.rs  mod.rs  refresh.rs  resource.rs
oxide-auth-async/src/frontends/: simple.rs
oxide-auth-async/src/frontends/simple/: endpoint.rs  mod.rs
oxide-auth-async/src/frontends/simple/extensions/: extended.rs  list.rs  mod.rs
oxide-auth-async/src/tests/: access_token.rs  authorization.rs  client_credentials.rs  mod.rs  refresh.rs  resource.rs  type_properties.rs
oxide-auth-axum/: Cargo.toml  Readme.md
oxide-auth-axum/src/: error.rs  lib.rs  request.rs  response.rs
oxide-auth-core/: Cargo.toml
oxide-auth-core/src/: lib.rs
oxide-auth-core/src/code_grant/: refresh.rs
oxide-auth-core/src/endpoint/: mod.rs
oxide-auth-core/src/endpoint/tests/: mod.rs
oxide-auth-core/src/frontends/: mod.rs
oxide-auth-core/src/frontends/simple/: endpoint.rs  request.rs
oxide-auth-core/src/frontends/simple/extensions/: list.rs  mod.rs
oxide-auth-core/src/primitives/: issuer.rs  mod.rs  scope.rs
oxide-auth-db/: .env  Cargo.toml  Changes.md  Readme.md
oxide-auth-db/examples/db-example/: Cargo.toml
oxide-auth-db/examples/db-example/src/: main.rs  support.rs
oxide-auth-db/examples/db-examples/: Cargo.toml
oxide-auth-db/examples/db-examples/src/: main.rs  support.rs
oxide-auth-db/src/: lib.rs
oxide-auth-db/src/db_service/: mod.rs  redis.rs
oxide-auth-db/src/primitives/: db_registrar.rs  mod.rs
oxide-auth-gotham/: Cargo.toml
oxide-auth-gotham/src/: lib.rs
oxide-auth-iron/: Cargo.toml  Readme.md
oxide-auth-iron/examples/: iron.rs
oxide-auth-iron/src/: lib.rs
oxide-auth-poem/: Cargo.toml  Readme.md
oxide-auth-poem/examples/poem-example/: main.rs  support.rs
oxide-auth-poem/src/: error.rs  lib.rs  request.rs  response.rs
oxide-auth-ring/: Cargo.toml
oxide-auth-ring/src/: authorizer.rs  generator.rs  issuer.rs  lib.rs  pkce.rs  registrar.rs
oxide-auth-ring/src/tests/: access_token.rs  authorization.rs  mod.rs  pkce.rs  refresh.rs  resource.rs
oxide-auth-rocket/: Cargo.toml  Readme.md
oxide-auth-rocket/examples/: rocket.rs
oxide-auth-rocket/src/: failure.rs  lib.rs
oxide-auth-rouille/: Cargo.toml  Readme.md  rouille.rs
oxide-auth-rouille/examples/: rouille.rs
oxide-auth-rouille/src/: lib.rs
oxide-auth/src/: lib.rs  util.rs
oxide-auth/src/code_grant/: access_token.rs  accesstoken.rs  authorization.rs  client_credentials.rs  error.rs  mod.rs  refresh.rs  resource.rs
oxide-auth/src/code_grant/extensions/: pkce.rs
oxide-auth/src/endpoint/: access_token.rs  accesstoken.rs  authorization.rs  client_credentials.rs  error.rs  mod.rs  query.rs  refresh.rs  resource.rs
oxide-auth/src/endpoint/tests/: access_token.rs  authorization.rs  client_credentials.rs  mod.rs  pkce.rs  refresh.rs  resource.rs
oxide-auth/src/frontends/: gotham.rs  mod.rs
oxide-auth/src/frontends/simple/: endpoint.rs  mod.rs  request.rs
oxide-auth/src/frontends/simple/extensions/: extended.rs  list.rs  mod.rs  pkce.rs
oxide-auth/src/primitives/: authorizer.rs  generator.rs  grant.rs  issuer.rs  mod.rs  registrar.rs  scope.rs
oxide-auth/src/primitives/generator/: assertion_grant.rs  mod.rs
oxide-auth/tests/: access_token.rs  authorization.rs  mod.rs  pkce.rs  refresh.rs  resource.rs
oxide-auth/tests/primitives/: authorizer.rs  issuer.rs  registrar.rs
src/: access.rs  client.rs  grant.rs  lib.rs
src/code_grant/: accesstoken.rs  authorization.rs  authorizer.rs  backend.rs  error.rs  frontend.rs  generator.rs  guard.rs  iron.rs  issuer.rs  mod.rs  negotiator.rs  refresh.rs  registrar.rs  resource.rs  scope.rs  tests.rs
src/code_grant_2/: accesstoken.rs  authorization.rs  frontend.rs  guard.rs  mod.rs
src/endpoint/: accesstoken.rs  authorization.rs  mod.rs  query.rs  refresh.rs  resource.rs
src/frontends/: actix.rs  gotham.rs  iron.rs  mod.rs  rouille.rs
src/iron/: mod.rs
src/primitives/: authorizer.rs  generator.rs  grant.rs  issuer.rs  mod.rs  registrar.rs  scope.rs
tests/ring-0.13/: Cargo.toml
tests/ring-0.14/: Cargo.toml
(+55 files in other folders)
