[package]
name = "oxide-auth"
version = "0.5.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "A OAuth2 server library, for actix, rocket, iron or other libraries, featuring a set of configurable and pluggable backends."
readme = "Readme.md"

keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT"

edition = "2018"

autoexamples = false


[dependencies]
oxide-auth-core = { version = "0.1", path = "./oxide-auth-core" }
oxide-auth-actix = { version = "0.1", path = "./oxide-auth-actix", optional = true }
oxide-auth-iron = { version = "0.1", path = "./oxide-auth-iron", optional = true }
oxide-auth-rouille = { version = "0.1", path = "./oxide-auth-rouille", optional = true }
oxide-auth-rocket = { version = "0.1", path = "./oxide-auth-rocket", optional = true }

# Gotham, not in used right now
# oxide-auth-gotham = { version = "0.1", path = "./oxide-auth-gotham", optional = true }

[features]
default = ["oxide-auth-actix"]

# [[example]]
# name = "authorization_gotham"
# required-features = ["oxide-auth-gotham"]

[package.metadata.docs.rs]
features = ["oxide-auth-actix", "oxide-auth-iron", "oxide-auth-rocket", "oxide-auth-rouille"]
