[workspace]
members = [
	"oxide-auth",
	"oxide-auth-actix",
	"oxide-auth-iron",
	# Rocket requires nightly, it's not in the workspace.
	"oxide-auth-rocket",
	"oxide-auth-rouille",
]

# Iron dependencies route-recognizer fails on nightly due to deprecation.
[patch.crates-io.route-recognizer]
git = "https://github.com/miller-time/route-recognizer.rs"
rev = "d7bc06d2dc58a2c59d8f2cfbee2ab23b8188700d"
