[profile.test]
opt-level = 2

[workspace]
resolver = "2"
members = [
	"oxide-auth",
	"oxide-auth-async",
	"oxide-auth-actix",
	"oxide-auth-actix/examples/actix-example",
	"oxide-auth-async-actix",
	"oxide-auth-async-actix/examples/async-actix-example",
	"oxide-auth-axum",
	"oxide-auth-iron",
	"oxide-auth-poem",
	"oxide-auth-rocket",
	"oxide-auth-rouille",
	"oxide-auth-db",
	"oxide-auth-db/examples/db-example",
]
