[package]
name = "oxide-auth-actix"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
description = "A OAuth2 server library for actix featuring a set of configurable and pluggable backends."
readme = "../Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0"
futures = "0.1"
oxide-auth = { version = "0.5.0-preview.0", path = "../oxide-auth" }
serde_urlencoded = "0.5.1"
url = "1.7"

[dev-dependencies]
base64 = "0.11"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
