[package]
name = "oxide-auth-actix"
version = "0.3.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "A OAuth2 server library for actix featuring a set of configurable and pluggable backends."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
actix = { version = "0.12", default-features = false }
actix-web = { version = "4.0.1", default-features = false }
futures = "0.3"
oxide-auth = { version = "0.6", path = "../oxide-auth" }
serde_urlencoded = "0.7"
url = "2"

[dev-dependencies]
base64 = "0.11"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
