[package]
name = "oxide-auth-async-actix"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "oxide-auth-actix but uses the oxide-auth-async as a endpoint backend to allow async operations."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
actix = { version = "0.13", default-features = false }
actix-web = { version = "4.2.1", default-features = false }
async-trait = "0.1.59"
futures = "0.3"
oxide-auth = { version = "0.5.0", path = "../oxide-auth" }
oxide-auth-async = { version = "0.1.0", path = "../oxide-auth-async" }
serde_urlencoded = "0.7"
url = "2"

[dev-dependencies]
base64 = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = "1.0"
serde_json = "1.0"
