[package]
name = "oxide-auth-async"
version = "0.2.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "Combines oxide-auth with async and futures"
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
async-trait = "0.1.21"
oxide-auth = { version = "0.5.0", path = "../oxide-auth" }
base64 = "0.12"
url = "2"
chrono = "0.4.2"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smol = "0.1.18"
