[package]
name = "oxide-auth-async"
version = "0.1.1"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "Combines oxide-auth with async and futures"
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
async-trait = "0.1.59"
oxide-auth = { version = "0.5.4", path = "../oxide-auth" }
base64 = "0.13.1"
url = "2.3.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }

[dev-dependencies]
oxide-auth = { version = "0.5.4", path = "../oxide-auth" }
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
smol = "1.3.0"
