[package]
name = "oxide-auth-axum"
version = "0.5.0"
authors = ["Daniel Alvsåker <daniel.alvsaaker@protonmail.com>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "A OAuth2 server library for Axum featuring a set of configurable and pluggable backends."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = [
    "form",
    "query",
] }
oxide-auth = { version = "0.6", path = "../oxide-auth" }
