[package]
name = "oxide-auth-db"
version = "0.1.0"
authors = ["liujing <liujingb@mail.taiji.com.cn>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
description = "A OAuth2 server library for redis registrar featuring a set of configurable and pluggable backends."
readme = "../Readme.md"
keywords = ["oauth", "server", "oauth2", "redis"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide-auth = { version = "0.5.0-preview.0", path = "../oxide-auth" }
once_cell = "1.3.1"
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-argon2 = "0.8.2"
r2d2 = {version ="0.8", optional = true }
r2d2_redis = {version = "0.13", optional = true }
url = "1.7"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = "^0.9"
log = "0.4.8"
log4rs = "0.10.0"


[features]
default = ["with-redis"]
with-redis = ["r2d2", "r2d2_redis"]