[package]
name = "oxide-auth-db"
version = "0.2.0"
authors = ["liujing <liujingb@mail.taiji.com.cn>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
description = "An implement of DB registrar with configurable databases."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2", "redis"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
oxide-auth = { version = "0.5.1", path = "../oxide-auth" }
once_cell = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
r2d2_redis = {version = "0.14", optional = true }
url = "2"
anyhow = "1.0"
log = "0.4.8"
log4rs = "0.10.0"


[features]
default = ["with-redis"]
with-redis = ["r2d2_redis"]
