[package]
name = "oxide-auth-iron"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
description = "A OAuth2 server library for iron featuring a set of configurable and pluggable backends."
readme = "../Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
iron = "0.6"
oxide-auth = { version = "0.5.0", path = "../oxide-auth" }
serde_urlencoded = "0.7"
url = "2"

[dev-dependencies]
reqwest = "0.9"
router = "0.6.0"
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
