[package]
name = "oxide-auth-poem"
version = "0.2.0"
repository = "https://github.com/HeroicKatora/oxide-auth.git"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
description = "A OAuth2 server library for Poem featuring a set of configurable and pluggable backends."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2", "poem"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3"
oxide-auth = { version = "0.6", path = "../oxide-auth" }
thiserror = "1.0"
serde_urlencoded = "0.7"
