[package]
name = "oxide-auth-poem"
version = "0.2.0"
repository = "https://github.com/HeroicKatora/oxide-auth.git"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
description = "A OAuth2 server library for Poem featuring a set of configurable and pluggable backends."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2", "poem"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = []

[dependencies]
poem = "3.1"
oxide-auth = { version = "0.6", path = "../oxide-auth" }
thiserror = "2.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
