[package]
name = "oxide-auth-ring"
version = "0.5.0-preview.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "A OAuth2 server library, for actix, gotham or other libraries, featuring a set of configurable and pluggable backends."
readme = "../Readme.md"

keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.9"
chrono = "0.4.2"
oxide-auth = { version = "0.5.0-preview.0", path = "../oxide-auth" }
ring = ">=0.13,<0.15"
rmp-serde = "^0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
