[package]
name = "oxide-auth-rocket"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "A OAuth2 server library for rocket featuring a set of configurable and pluggable backends."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
oxide-auth = { version = "0.5.0", path = "../oxide-auth" }
serde_urlencoded = "0.7"

[dev-dependencies]
oxide-auth = { version = "0.5.0", path = "../oxide-auth", features = [
    "client-map",
] }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
