[package]
name = "oxide-auth-rouille"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
edition = "2018"

description = "Combines oxide-auth with a rouille web server"
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"

[dependencies]
rouille = "3.0"
oxide-auth = { version = "0.5.0", path = "../oxide-auth" }
serde_urlencoded = "0.7"
url = "2"

[dev-dependencies]
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
