[package]
name = "oxide-auth"
version = "0.5.3"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
edition = "2018"

description = "A OAuth2 library for common web servers, featuring a set of configurable and pluggable backends."
readme = "Readme.md"

keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"

autoexamples = false

[dependencies]
base64 = "0.13.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
hmac = "0.12.1"
once_cell = "1.16.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_derive = "1.0.148"
serde_json = "1.0.89"
sha2 = "0.10.6"
subtle = "2.4.1"
rand = "0.8.5"
rust-argon2 = "1.0.0"
rmp-serde = "1.1.1"
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }

[package.metadata.docs.rs]
features = []
