[package]
name = "oxide-auth"
version = "0.5.3"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
edition = "2018"

description = "A OAuth2 library for common web servers, featuring a set of configurable and pluggable backends."
readme = "Readme.md"

keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"

autoexamples = false

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hmac = "0.12.0"
once_cell = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.1"
subtle = "2.4.1"
rand = "0.8"
rust-argon2 = "1.0"
rmp-serde = "1.1"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }

[package.metadata.docs.rs]
features = []
