[package]
name = "oxide-auth"
version = "0.5.4"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
edition = "2018"

description = "A OAuth2 library for common web servers, featuring a set of configurable and pluggable backends."
readme = "Readme.md"

keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"

autoexamples = false

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hmac = { version = "0.12.0", optional = true }
once_cell = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.1"
subtle = "2.4.1"
rand = "0.8"
rust-argon2 = { version = "1.0", optional = true }
rmp-serde = { version = "1.1", optional = true }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
rmp-serde = "1.1"

[features]
default = []
argon2 = ["dep:rust-argon2"]
assertion-grant = ["dep:hmac", "dep:rmp-serde"]
client-map = ["argon2"]
token-signer = ["assertion-grant"]

[package.metadata.docs.rs]
all-features = true
