[package]
name = "actix-example"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7"
actix-web = "0.7"
futures = "0.1"
oxide-auth = { version = "0.5", path = "../.." }
reqwest = "=0.9.5"
serde = "1.0"
serde_json = "1.0"
url = "1.7"
