[package]
name = "iron-example"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6"
oxide-auth = { version = "0.5", path = "../..", default-features = false, features = ["oxide-auth-iron"] }
reqwest = "0.9"
router = "0.6"
serde = "1.0"
serde_json = "1.0"
