[package]
name = "oxide-auth-ring-0-14"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
publish = false

[workspace]
members = ["."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
oxide-auth-ring = { path = "../../oxide-auth-ring" }
ring = "0.14"
