[package]
name = "actix-example"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
actix = "0.12"
actix-web = "4.0.1"
env_logger = "0.7"
futures = "0.3"
oxide-auth = { version = "0.5.0", path = "./../../../oxide-auth" }
oxide-auth-actix = { version = "0.2.0", path = "./../../" }
reqwest = "=0.9.5"
serde = "1.0"
serde_json = "1.0"
url = "2"
serde_urlencoded = "0.7"
