[package]
name = "actix-example"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
actix = "0.13"
actix-web = "4.2.1"
env_logger = "0.9"
futures = "0.3"
oxide-auth = { version = "0.5.0", path = "./../../../oxide-auth", features = [
    "argon2",
] }
oxide-auth-actix = { version = "0.2.0", path = "./../../" }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
url = "2"
serde_urlencoded = "0.7"
tokio = "1.16.1"
