[package]
name = "actix-example"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
env_logger = "0.10.0"
futures = "0.3.25"
oxide-auth = { version = "0.5.0", path = "./../../../oxide-auth" }
oxide-auth-actix = { version = "0.2.0", path = "./../../" }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = "1.0.148"
serde_json = "1.0.89"
url = "2.3.1"
serde_urlencoded = "0.7.1"
tokio = "1.22.0"
