[package]
name = "async-actix-example"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
actix = "0.13"
actix-web = "4.2.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.71"
env_logger = "0.9"
futures = "0.3"
oxide-auth = { version = "0.5.0", path = "./../../../oxide-auth" }
oxide-auth-actix = { version = "0.2.0", path = "./../../../oxide-auth-actix" }
oxide-auth-async = { version = "0.1.0", path = "./../../../oxide-auth-async" }
oxide-auth-async-actix = { version = "0.1.0", path = "./../../" }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6.3", features = ["sqlite", "offline", "runtime-actix-native-tls"] }
url = "2"
serde_urlencoded = "0.7"
tokio = "1.16.1"
async-trait = "0.1.68"
once_cell = "1.17.1"
chrono = "0.4.24"
