[package]
name = "db-example"
version = "0.1.0"
authors = ["liujing <liujingb@mail.taiji.com.cn>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide-auth = { version = "0.5.0-preview.0", path = "../../../oxide-auth" }
oxide-auth-actix = { version = "0.1.0", path = "./../../../oxide-auth-actix" }
oxide-auth-db = { version = "0.1.0", path = "./../../"}
actix = { version = "0.11.1", default-features = false }
actix-rt = "2.2.0"
actix-web = { version = "4.0.0-beta.6", default-features = false }
env_logger = "0.7"
futures = "0.3"
reqwest = "=0.9.5"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.0"
url = "2"
anyhow = "1.0"
r2d2_redis = {version = "0.13"}

