[package]
name = "db-example"
version = "0.0.0"
authors = ["liujing <liujingb@mail.taiji.com.cn>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
oxide-auth = { version = "0.5.1", path = "../../../oxide-auth" }
oxide-auth-actix = { version = "0.2.0", path = "./../../../oxide-auth-actix" }
oxide-auth-db = { version = "0.2.0", path = "./../../", features = ["with-redis"] }

anyhow = "1.0"
actix = "0.13"
actix-web = "4.2.1"
env_logger = "0.9"
futures = "0.3"
reqwest = {version="0.11.10", features = ["blocking"]}
r2d2_redis = {version = "0.14"}
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "^0.7"
url = "2"
